cases/hostnetwork_case.yaml
apiVersion: v1
kind: Service
metadata:
  name: sniffer-svc
spec:
  type: NodePort
  selector:
    app: sniffer
  ports:
    - port: 80
      targetPort: 9000
      nodePort: 30090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sniffer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sniffer
  template:
    metadata:
      labels:
        app: sniffer
    spec:
      hostNetwork: true
      containers:
        - name: sniffer
          image: nicolaka/netshoot:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
